tests/spec/parse/snapshots/or_pattern_multiple_arms.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(x: int) -> string {
    match x {
      0 | 1 => "binary",
      2 | 3 | 5 | 7 => "small prime",
      _ => "other",
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "string",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 20,
                byte_length: 6,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 37,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        Literal {
                                            literal: Integer {
                                                value: 0,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 45,
                                                byte_length: 1,
                                            },
                                        },
                                        Literal {
                                            literal: Integer {
                                                value: 1,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 49,
                                                byte_length: 1,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 45,
                                        byte_length: 5,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "binary",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 54,
                                        byte_length: 8,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        Literal {
                                            literal: Integer {
                                                value: 2,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 68,
                                                byte_length: 1,
                                            },
                                        },
                                        Literal {
                                            literal: Integer {
                                                value: 3,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 72,
                                                byte_length: 1,
                                            },
                                        },
                                        Literal {
                                            literal: Integer {
                                                value: 5,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 76,
                                                byte_length: 1,
                                            },
                                        },
                                        Literal {
                                            literal: Integer {
                                                value: 7,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 80,
                                                byte_length: 1,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 68,
                                        byte_length: 13,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "small prime",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 85,
                                        byte_length: 13,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: WildCard {
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 104,
                                        byte_length: 1,
                                    },
                                },
                                expression: Literal {
                                    literal: String {
                                        value: "other",
                                        raw: false,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 109,
                                        byte_length: 7,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 90,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 96,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 122,
        },
    },
]
