tests/spec/parse/snapshots/or_pattern_parenthesized.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Color { Red, Blue }
  fn test(c: Color) -> int {
    match c {
      (Red | Blue) => 1,
    }
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Color",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 5,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Red",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 14,
                    byte_length: 3,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Blue",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 19,
                    byte_length: 4,
                },
                fields: Unit,
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 24,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 29,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "c",
                    span: Span {
                        file_id: 0,
                        byte_offset: 34,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Color",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 37,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 47,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "c",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 61,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        EnumVariant {
                                            identifier: "Red",
                                            fields: [],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 70,
                                                byte_length: 3,
                                            },
                                        },
                                        EnumVariant {
                                            identifier: "Blue",
                                            fields: [],
                                            rest: false,
                                            resolution: Unresolved,
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 76,
                                                byte_length: 4,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 70,
                                        byte_length: 10,
                                    },
                                },
                                expression: Literal {
                                    literal: Integer {
                                        value: 1,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 85,
                                        byte_length: 1,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 55,
                            byte_length: 36,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 51,
                    byte_length: 42,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 26,
            byte_length: 67,
        },
    },
]
