tests/spec/parse/snapshots/or_pattern_strings.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(s: string) -> int {
    match s {
      "yes" | "y" | "true" => 1,
      "no" | "n" | "false" => 0,
      _ => -1,
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "s",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 6,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 23,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "s",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 37,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        Literal {
                                            literal: String {
                                                value: "yes",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 45,
                                                byte_length: 5,
                                            },
                                        },
                                        Literal {
                                            literal: String {
                                                value: "y",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 53,
                                                byte_length: 3,
                                            },
                                        },
                                        Literal {
                                            literal: String {
                                                value: "true",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 59,
                                                byte_length: 6,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 45,
                                        byte_length: 20,
                                    },
                                },
                                expression: Literal {
                                    literal: Integer {
                                        value: 1,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 69,
                                        byte_length: 1,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: Or {
                                    patterns: [
                                        Literal {
                                            literal: String {
                                                value: "no",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 76,
                                                byte_length: 4,
                                            },
                                        },
                                        Literal {
                                            literal: String {
                                                value: "n",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 83,
                                                byte_length: 3,
                                            },
                                        },
                                        Literal {
                                            literal: String {
                                                value: "false",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 89,
                                                byte_length: 7,
                                            },
                                        },
                                    ],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 76,
                                        byte_length: 20,
                                    },
                                },
                                expression: Literal {
                                    literal: Integer {
                                        value: 0,
                                        text: None,
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 100,
                                        byte_length: 1,
                                    },
                                },
                            },
                            MatchArm {
                                pattern: WildCard {
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 107,
                                        byte_length: 1,
                                    },
                                },
                                expression: Unary {
                                    operator: Negative,
                                    expression: Literal {
                                        literal: Integer {
                                            value: 1,
                                            text: None,
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 113,
                                            byte_length: 1,
                                        },
                                    },
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 112,
                                        byte_length: 2,
                                    },
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 31,
                            byte_length: 88,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 27,
                    byte_length: 94,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 120,
        },
    },
]
